k8s/staging/backend-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: staging
  labels:
    app.kubernetes.io/name: fastapi-traefik-datascientest-project
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/environment: staging
    app.kubernetes.io/managed-by: github-actions
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: fastapi-traefik-datascientest-project
      app.kubernetes.io/component: backend
      app.kubernetes.io/environment: staging
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fastapi-traefik-datascientest-project
        app.kubernetes.io/component: backend
        app.kubernetes.io/environment: staging
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/fastapi-liora/fastapi-traefik-datascientest-project-backend:staging
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: staging
  labels:
    app.kubernetes.io/name: fastapi-traefik-datascientest-project
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/environment: staging
    app.kubernetes.io/managed-by: github-actions
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fastapi-traefik-datascientest-project
    app.kubernetes.io/component: backend
    app.kubernetes.io/environment: staging
  ports:
    - port: 8000
      targetPort: 8000
